<resources>

    <string name="app_name">Менеджер паролей</string>

    <string name="greeting">Здравствуйте</string>
    <string name="enter">Войти</string>
    <string name="save">Сохранить</string>
    <string name="edit">Изменить</string>
    <string name="cancel">Отмена</string>

    <string name="search">Найти</string>
    <string name="reset">Сброс</string>

    <string name="name">Имя:</string>
    <string name="enter_name">Введите имя</string>

    <string name="password">Пароль:</string>
    <string name="enter_password">Введите пароль</string>

    <string name="login">Логин:</string>
    <string name="enter_login">Введите логин</string>

    <string name="email">Email:</string>
    <string name="enter_email">Введите email</string>
    
    <string name="description">Описание:</string>
    <string name="enter_description">Введите описание</string>

    <string name="categories">Категории:</string>

    <string-array name="search_type">
        <item>Название</item>
        <item>Email</item>
        <item>Логин</item>
    </string-array>

</resources>
